# thokr

./: Cargo.toml  README.md
src/: decorate.rs  main.rs  theme.rs  thok.rs  ui.rs
src/lang/: mod.rs
