[package]
name = "thokr-plus"
description = "sleek typing tui — continuous timed mode, themes, death mode, punctuation & numbers (a thokr fork)"
version = "0.6.0"
readme = "README.md"
repository = "https://github.com/hindriix/thokr.git"
homepage = "https://github.com/hindriix/thokr"
license = "MIT"
authors = [
    "hindriix",
    "Colby Thomas <thatvegandev@gmail.com>",
]
edition = "2021"
exclude = [".github", "*.log", "Dockerfile", "plans"]
keywords = ["tui", "terminal", "typing"]
categories = ["command-line-utilities", "games"]

# published crate name is `thokr-plus`, but the installed command stays `thokr`
[[bin]]
name = "thokr"
path = "src/main.rs"

[dependencies]
ratatui = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0.79"
rand = "0.8.5"
itertools = "0.10.3"
unicode-width = "0.1.9"
webbrowser = "0.7.1"
strum_macros = "0.24.0"
include_dir = "0.7.2"
directories = "4.0"
chrono = "0.4"
cgisf_lib = "0.1.3"
